--- a/index.html
+++ b/index.html
@@ -50,24 +50,22 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">About Me </h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<h2>About Me </h2>
+									<p>I'm a software engineer specializing in all things front end development and design.
+									   I have a passion for building human-centered accessible digital experiences.
+									   Currently, I'm focused on building on my knowledge of React/Redux, Sass, Typescript, and unit testing.
+									   When I'm not coding, I love to write, cook, run, and hang out with my pittie rescue Juna.
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Check it out</a></li>
-								</ul>
+								<a href="https://github.com/kristinponsonby" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Pupstagram<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">Pupstagram</a></h2>
 									</header>
+										<p>An Instagram style social media app-for dog lovers!</p>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
@@ -76,9 +74,9 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Gluten-free Recipe Finder<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Sweet Tooth</a></h2>
 									</header>
+										<p>An application for browsing/storing gluten-free recipes.</p>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
@@ -87,9 +85,9 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="#">Street Eats</a></h2>
 									</header>
+										<p>Browse all your fave food trucks in Knoxville, TN.</p>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
@@ -98,16 +96,16 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="#">Romp</a></h2>
 									</header>
+										<p>An app to browse all dog parks in Washington, D.C.</p>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Go</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 									<header>
 										<h2><a href="#">Odio magna<br />
 										sed consectetur</a></h2>
@@ -128,7 +126,7 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Go</a></li>
 									</ul>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Footer -->
@@ -174,8 +172,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p><br />
-								Knoxville, TN</p>
+								<p>Knoxville, TN</p>
 							</section>
 							<!-- <section>
 								<h3>Phone</h3>
