Update project text

--- a/index.html
+++ b/index.html
@@ -63,46 +63,48 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Pupstagram</a></h2>
+										<h2><a href="https://www.loom.com/share/cccf50a2e53e49d68c0f2d81ce5f47cb?sharedAppSource=personal_library">Pupstagram</a></h2>
 									</header>
 										<p>An Instagram style social media app-for dog lovers!</p>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/kristinponsonby/pupstagram-frontend" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<p>React/Redux component-based front end and a Rails API backend. Utilized JSON Web Tokens and localStorage to store encrypted user information client-side.
+									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Go</a></li>
+										<li><a href="https://github.com/kristinponsonby/pupstagram-backend" class="button">Code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Sweet Tooth</a></h2>
+										<h2><a href="https://youtu.be/sPtZ9s7YmhI">Sweet Tooth</a></h2>
 									</header>
 										<p>An application for browsing/storing gluten-free recipes.</p>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/kristinponsonby/gf-recipe-finder-frontend" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<p>JavaScript front end and Rails backend/routes. Used a SQLite database for development purposes and storing user information.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Go</a></li>
+										<li><a href="https://github.com/kristinponsonby/gf-recipe-finder-backend" class="button">Code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Street Eats</a></h2>
+										<h2><a href="https://youtu.be/GvlksTMyyW8">Street Eats</a></h2>
 									</header>
 										<p>Browse all your fave food trucks in Knoxville, TN.</p>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/kristinponsonby/street-eats-app" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<p>Utilized Ruby on Rails and the model-view-controller pattern to allow users to browse/create resources and leave reviews. Google Omniauth for user authentication.
+									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Go</a></li>
+										<li><a href="https://github.com/kristinponsonby/street-eats-app" class="button">Code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Romp</a></h2>
+										<h2><a href="https://youtu.be/kWekiK2QZ9Q">Romp</a></h2>
 									</header>
 										<p>An app to browse all dog parks in Washington, D.C.</p>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/kristinponsonby/Romp-app" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<p>Sinatra, Rails, and CSS web application with a SQLite database. Users may track details about dog parks in their area including address, water availability, and size.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Go</a></li>
+										<li><a href="https://github.com/kristinponsonby/Romp-app" class="button">Code</a></li>
 									</ul>
 								</article>
 								<!-- <article>
