edits to about me section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Hi.</h1>
-						<p>I'm Kristin Ponsonby. I'm a web developer turned front end software engineer.
+						<p>I'm Kristin Ponsonby. I'm a software engineer based on Tennessee.
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -51,9 +51,8 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>About Me </h2>
-									<p>I'm a software engineer specializing in all things front end development and design.
-									   I have a passion for building human-centered accessible digital experiences.
-									   Currently, I'm focused on building on my knowledge of React/Redux, Sass, Typescript, and unit testing.
+									<p>I have a passion for building human-centered accessible digital experiences.
+									   Currently, I'm focused on building on my knowledge of React, Sass, Typescript, and unit testing.
 									   When I'm not coding, I love to write, cook, run, and hang out with my pittie rescue Juna.
 								</header>
 								<a href="https://github.com/kristinponsonby" class="image main"><img src="images/pic01.jpg" alt="" /></a>
@@ -67,7 +66,7 @@
 									</header>
 										<p>An Instagram style social media app-for dog lovers!</p>
 									<a href="https://github.com/kristinponsonby/pupstagram-frontend" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>React/Redux component-based front end and a Rails API backend. Utilized JSON Web Tokens and localStorage to store encrypted user information client-side.
+									<p>React component-based front end and a Rails API backend. Utilized JSON Web Tokens and localStorage to store encrypted user information client-side.
 									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/kristinponsonby/pupstagram-backend" class="button">Code</a></li>
