--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Hi.</h1>
-						<p>I'm Kristin Ponsonby. I'm a software engineer based on Tennessee.
+						<p>I'm Kristin Ponsonby. I'm a software engineer based in Tennessee.
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
