Change contact button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="mailto:kristinponsonby@gmail.com" class="logo">Contact</a>
+						<a href="https://github.com/kristinponsonby" class="logo">GitHub</a>
 					</header>
 
 				<!-- Nav -->
